# AxumAgent

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  README.md  TODO.md  go.mod  package-lock.json  package.json
.github/workflows/: ci.yml  python-sdk-release.yml  rust-ci-full-nextest-platform.yml  rust-ci-full.yml  rust-release-windows.yml  rust-release.yml  termux-android-spike.yml  v8-canary.yml
artifacts/android-aarch64/: README.md
cmd/sagent/: main.go
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-api/src/endpoint/: chat_completions.rs
codex-rs/core/src/: client.rs
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
crates/cli/src/: main.rs
internal/agent/: runtime.go  tools.go  types.go
internal/server/: server.go  server_test.go
internal/store/: store.go  store_test.go
internal/web/: index.html
rs/: Cargo.toml
rs/crates/axum-cli/: Cargo.toml
rs/crates/axum-cli/src/: cli.rs  main.rs  server.rs  types.rs
rs/crates/axum-cli/src/output/: commands.rs  print.rs
rs/crates/axum-llm/: Cargo.toml
rs/crates/axum-llm/src/: lib.rs
rs/crates/axum-policy/: Cargo.toml
rs/crates/axum-policy/src/: lib.rs
rs/crates/axum-runtime/: Cargo.toml
rs/crates/axum-runtime/src/: lib.rs
rs/crates/axum-server/: Cargo.toml
rs/crates/axum-server/src/: db.rs  main.rs  manager.rs
rs/crates/axum-tools/: Cargo.toml
rs/crates/axum-tools/src/: lib.rs
rs/crates/axum-types/: Cargo.toml
rs/crates/sagent-cli/: Cargo.toml
rs/crates/sagent-cli/src/: api.rs  cli.rs  main.rs  server.rs
rs/crates/sagent-cli/src/output/: commands.rs  mod.rs  print.rs
rs/crates/sagent-llm/: Cargo.toml
rs/crates/sagent-llm/src/: lib.rs
rs/crates/sagent-policy/: Cargo.toml
rs/crates/sagent-policy/src/: lib.rs
rs/crates/sagent-runtime/: Cargo.toml
rs/crates/sagent-runtime/src/: lib.rs
rs/crates/sagent-server/: Cargo.toml
rs/crates/sagent-server/src/: main.rs  manager.rs
rs/crates/sagent-tools/: Cargo.toml
rs/crates/sagent-tools/src/: lib.rs
rs/crates/sagent-types/: Cargo.toml
rs/crates/sagent-types/src/: lib.rs
scripts/: inspect-kilocode-package.mjs
src/: cli.ts  config.ts  ensure-bundled-pi.js  provider-config.js  resolve-bundled-pi.js  web-host.ts
src/providers/: openai-chat.ts
src/runtime/: events.ts  pi-workflow.ts  protocol.ts  session.ts  tool-runner.ts  tools.ts  turn.ts
src/shell/: kilo-shell.ts
src/tui/: model-picker.ts  runtime-view.ts  slash-commands.ts  text.ts
test/: provider-config.test.js  resolve-bundled-pi.test.js
tests/: openai-chat-cli.test.js  tui-screenshot.test.js  web-host.test.js
tests/snapshots/: model-list.txt  slash-command-palette.txt
