[package]
name = "axum-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust CLI agent with OpenAI-compatible providers and terminal UI foundations"

[[bin]]
name = "axum"
path = "crates/cli/src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.9.8"
