[package]
name = "axum-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1.89"
async-stream = "0.3.6"
futures = "0.3.31"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.17.0", features = ["v4"] }
axum-runtime = { path = "../axum-runtime" }
axum-types = { path = "../axum-types" }
axum-tools = { path = "../axum-tools" }
axum-policy = { path = "../axum-policy" }
axum-llm = { path = "../axum-llm" }
