[package]
name = "axum-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-types = { path = "../axum-types" }
async-trait = "0.1.89"
serde_json = "1.0.140"
tokio = { version = "1.47.0", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.47.0", features = ["macros", "rt", "fs"] }
