[package]
name = "sagent-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sagent-types = { path = "../sagent-types" }
async-trait = "0.1.89"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
