[package]
name = "sagent-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1.89"
async-stream = "0.3.6"
futures = "0.3.31"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.17.0", features = ["v4"] }
sagent-runtime = { path = "../sagent-runtime" }
sagent-types = { path = "../sagent-types" }
sagent-tools = { path = "../sagent-tools" }
sagent-policy = { path = "../sagent-policy" }
sagent-llm = { path = "../sagent-llm" }
